[package]
name = "vectorflow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.3"
gloo-utils = "0.1"
js-sys = "0.3"
yew = { version = "0.20.0", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
rand = "0.8.4"
getrandom = { version = "0.2", features = ["js"] }
log = "0.4.20"
wasm-logger = "0.2.0"

[dependencies.web-sys]
version = "0.3.58"
features = [
  "Navigator",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
  "ImageData",
  "ImageBitmap"
]

[lib]
name = "vectorflow"
crate-type = ["cdylib", "rlib"]
